--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         class="input-task"
       />
       <!--Input Do texto-->
-      <button class="button-add-task">Add it!</button>
+      <button class="button" id="buttonAdd">Add it!</button>
+      <button class="button" id="button-Clear">Clear</button>
       <!--Botao de adicionar tarefa-->
       <ul class="task-list">
         <!--Cria uma lista-->
