--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="https://thenounproject.com/api/private/icons/5798207/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0"
+      type="image/x-icon"
+      class="favicon"
+    />
     <title>To-do List</title>
     <link rel="stylesheet" href="style.css" />
   </head>
